style.css
body {
    /* Default (Dark Mode) */
    background-color: #0a0a0a;
    color: #ffffff;
}

header {
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 12pt;
    text-align: center;
    margin: 30px;
}

hr {
    width: 600px;
    border-color: gray;
}

